<resources>
    <string name="app_name">SpaceX</string>
    <string name="nav_header_title">SpaceX - Launch Tracker</string>
    <string name="nav_header_subtitle">By Zac Hadjineophytou</string>
    <string name="menu_home">Home</string>
    <string name="menu_news">News</string>
    <string name="menu_launches">Launches</string>
    <string name="menu_statistics">Statistics</string>
    <string name="menu_about">About</string>
    <string name="menu_about_spacex">About SpaceX</string>
    <string name="menu_company">Company</string>
    <string name="menu_history">History</string>
    <string name="menu_ships">Ships</string>
    <string name="detail_capsule">Capsule</string>
    <string name="launches_webcast_live">Webcast Live</string>
    <string name="launches_status_label">Status:</string>
    <string name="launches_launch_location_label">Launch site:</string>
    <string name="launches_watch_button_label">Watch</string>
    <string name="launches_event_button_label">Create event</string>
    <string name="filter_successes">Successes</string>
    <string name="filter_failures">Failures</string>
    <string name="filter">Filter:</string>
    <string name="reset">Reset</string>
    <string name="falcon_1">Falcon 1</string>
    <string name="falcon_9">Falcon 9</string>
    <string name="falcon_heavy">Falcon Heavy</string>
    <string name="starship">Starship</string>
    <string name="screen_name">\@%1$s</string>
    <string name="twitter_profile_image_desc">Twitter profile image</string>
    <string name="scroll_to_top_label">Scroll To Top</string>
    <string name="filter_heading">Filter</string>
    <string name="date_range_label">Date range:</string>
    <string name="date_picker_button_label">Select</string>
    <string name="order_label">Order:</string>
    <string name="ascending_button_label">Asc</string>
    <string name="descending_button_label">Desc</string>
    <string name="rocket_type_label">Rocket:</string>
    <string name="clear_label">Clear</string>
    <string name="apply_label">Apply</string>
    <string name="filter_launches_description">Open launches filter</string>
    <string name="date_picker_label">Select date range</string>
    <string name="first_stage">First Stage</string>
    <string name="payload_label">Payload</string>
    <string name="reused_status_desc">Reused status</string>
    <string name="landed_label">Landed</string>
    <string name="landed_status_desc">Landed status</string>
    <string name="landing_label">Landing</string>
    <string name="flights_label">Flights</string>
    <string name="missions_label">Missions</string>
    <string name="rtls_attempts_label">RTLS Attempts</string>
    <string name="rtls_landings_label">RTLS Landings</string>
    <string name="asds_attempts_label">ASDS Attempts</string>
    <string name="asds_landings_label">ASDS Landings</string>
    <string name="core_serial_label">Core Serial</string>
    <string name="block_label">Block</string>
    <string name="customer_label">Customer</string>
    <string name="orbit_label">Orbit</string>
    <string name="lifespan_label">Lifespan</string>
    <string name="mass_label">Mass</string>
    <string name="payload_type_label">Payload type</string>
    <string name="reference_system_label">Reference System</string>
    <string name="regime_label">Regime</string>
    <string name="longitude_label">Longitude</string>
    <string name="semi_major_axis_label">Semi Major Axis</string>
    <string name="eccentricity_label">Eccentricity</string>
    <string name="periapsis_km_label">Periapsis (km)</string>
    <string name="apoapsis_km_label">Apoapsis (km)</string>
    <string name="inclination_label">Inclination</string>
    <string name="period_label">Period</string>
    <string name="mass">%1$s kg / %2$s lbs</string>
    <string name="static_fire_label">Static fire:</string>
    <string name="watch_label">Watch</string>
    <string name="press_kit_label">Press Kit</string>
    <string name="campaign_label">Campaign</string>
    <string name="launch_label">Launch</string>
    <string name="media_label">Media</string>
    <string name="details_label">Details</string>
    <string name="cores_label">Cores</string>
    <string name="payloads_label">Payloads</string>
    <string name="statistics_launch_history">Launch History</string>
    <string name="statistics_landing_history">Landing History</string>
    <string name="statistics_launch_rate">Launch Rate</string>
    <string name="statistics_mass_to_orbit">Mass to Orbit</string>
    <string name="statistics_fairing_recovery">Fairing Recovery</string>
    <string name="statistics_launchpads">Launchpads</string>
    <string name="statistics_landing_pads">Landing Pads</string>
    <string name="success_rate_heading">Launch Success Rate</string>
    <string name="percentage">%1$d%%</string>
    <string name="pie_chart_title">Launches\n%1$s</string>
    <string name="falcon_1_rate_label">Falcon 1:</string>
    <string name="falcon_9_rate_label">Falcon 9:</string>
    <string name="falcon_heavy_rate_label">Falcon Heavy:</string>
    <string name="failures_rate_label">Failures:</string>
    <string name="future_rate_label">Future:</string>
    <string name="total_rate_label">Total:</string>
    <string name="mass_kg">%1$s kg</string>
    <string name="status_label">Status</string>
    <string name="successes_label">Successes</string>
    <string name="attempts_label">Attempts</string>
    <string name="launch_pad_status_desc">Launch pad status</string>
    <string name="launch_pad_type_desc">Pad type</string>
    <string name="rockets_label">Rockets</string>
    <string name="orbits_label">Orbits</string>
    <string name="type_filter_label">Type:</string>
    <string name="illustration_by_freepik_stories">Illustration by Freepik Stories</string>
    <string name="powered_by">Powered by the Launch Library, r/SpaceX, Twitter and Reddit API</string>
    <string name="spacex_launch_tracker_icon_desc">SpaceX Launch Tracker Icon</string>
    <string name="version_name">v%1$s</string>
    <string name="search">Search</string>
    <string name="pinned_launches">Pinned</string>
    <string name="pin">Pin</string>
    <string name="founded_label">Founded</string>
    <string name="ceo_label">CEO</string>
    <string name="cto_label">CTO</string>
    <string name="coo_label">COO</string>
    <string name="cto_propulsion_label">CTO Propulsion</string>
    <string name="valuation_label">Valuation</string>
    <string name="employees_label">Employees</string>
    <string name="vehicles_label">Vehicles</string>
    <string name="launch_sites_label">Launch Sites</string>
    <string name="test_sites_label">Test Sites</string>
    <string name="spacex_logo_desc">SpaceX Logo</string>
    <string name="address">%1$s, %2$s, %3$s</string>
    <string name="founded">%1$s, %2$s</string>
    <string name="website_label">Website</string>
    <string name="twitter_label">Twitter</string>
    <string name="album_label">Album</string>
    <string name="create_event_label">Create Event</string>
    <string name="launch_details_icon_desc">Launch Details Icon</string>
    <string name="launch_details_label">Launch Details</string>
    <string name="reddit_campaign_icon_desc">Reddit Campaign Icon</string>
    <string name="reddit_campaign_label">Reddit Campaign</string>
    <string name="wikipedia_icon_desc">Wikipedia Icon</string>
    <string name="wikipedia_label">ikipedia</string>
    <string name="article_icon_desc">Article Icon</string>
    <string name="article_label">Article</string>
    <string name="menu_vehicles">Vehicles</string>
    <string name="first_flight_label">First Flight</string>
    <string name="capsule_specs_label">Capsule Specs</string>
    <string name="vehicle_specs_label">Vehicle Specs</string>
    <string name="rocket_image_desc">Rocket Image</string>
    <string name="measurements">%1$s m / %2$s ft</string>
    <string name="mass_formatted">%1$s kg / %2$s lbs</string>
    <string name="volume_formatted">%1$s m\u00B3 / %2$s ft\u00B3</string>
    <string name="ton_format">%1$s t</string>
    <string name="thrust">%1$s kN / %2$s lbf</string>
    <string name="seconds_format">%1$d s</string>
    <string name="active_label">Active</string>
    <string name="status_image_desc">Status Image</string>
    <string name="cost_per_launch_label">Cost Per Launch</string>
    <string name="stages_label">Stages</string>
    <string name="height_label">Height</string>
    <string name="diameter_label">Diameter</string>
    <string name="reusable_label">Reusable</string>
    <string name="engines_label">Engines</string>
    <string name="fuel_amount_label">Fuel Amount</string>
    <string name="burn_time_label">Burn Time</string>
    <string name="thrust_at_sea_level_label">Thrust At Sea Level</string>
    <string name="thrust_in_vacuum_label">Thrust In Vacuum</string>
    <string name="second_stage_label">Second Stage</string>
    <string name="thrust_label">Thrust</string>
    <string name="type_label">Type</string>
    <string name="reuse_count_label">Reuse Count</string>
    <string name="landings_label">Landings</string>
    <string name="no_missions_found">No missions found.</string>
    <string name="block">Block %1$s</string>
    <string name="sort_label">Sort</string>
    <string name="newest_first_label">Newest first</string>
    <string name="oldest_first_label">Oldest first</string>
    <string name="filter_label">Filter</string>
    <string name="reload_label">Reload</string>
    <string name="amount_label">Amount</string>
    <string name="pods_label">Pods</string>
    <string name="fuel_1_label">Fuel 1</string>
    <string name="fuel_2_label">Fuel 2</string>
    <string name="core_specs_label">Core Specs</string>
    <string name="crew_capacity_label">Crew Capacity</string>
    <string name="dry_mass_label">Dry Mass</string>
    <string name="heat_shield_label">Heat Shield</string>
    <string name="material_label">Material</string>
    <string name="size_label">Size</string>
    <string name="temperature_label">Temperature</string>
    <string name="thrusters_label">Thrusters</string>
    <string name="launch_mass_label">Launch Mass</string>
    <string name="return_mass_label">Return Mass</string>
    <string name="launch_volume_label">Launch Volume</string>
    <string name="return_volume_label">Return Volume</string>
    <string name="pressurized_volume_label">Pressurized Volume</string>
    <string name="trunk_volume_label">Trunk Volume</string>
    <string name="solar_array_label">Solar Array</string>
    <string name="unpressurized_cargo_label">Unpressurized Cargo</string>
    <string name="roles_label">Roles</string>
    <string name="home_port_label">Home Port</string>
    <string name="year_built_label">Year Built</string>
    <string name="network_connection">No network connection detected!</string>
    <string name="dismiss_label">Dismiss</string>
    <string name="theme_label">Theme</string>
    <string name="edit_label">Edit</string>
    <string name="launch_site_label">Launch site:</string>
    <string name="mass_to_orbit_label">Mass to Orbit</string>
    <string name="menu_crew">Crew</string>
    <string-array name="order">
        <item>Hot</item>
        <item>New</item>
    </string-array>
    <string name="crew_agency_label">Agency:</string>
    <string name="crew_role_label">Role:</string>
    <string name="crew_status_label">Status:</string>
    <string name="crew_first_flight_label">First flight:</string>
    <string name="more_icon_desc">More Icon</string>
    <string name="pin_launch_to_dashboard_desc">Pin launch to dashboard</string>
    <string name="settings">Settings</string>
</resources>