<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/app_bar_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always" />

    <item
        android:id="@+id/sort"
        android:icon="@drawable/ic_sort_black_24dp"
        android:title="@string/sort_label"
        app:showAsAction="ifRoom">

        <menu>

            <item
                android:id="@+id/sort_new"
                android:icon="@drawable/ic_arrow_downward_black_24dp"
                app:iconTint="@color/color_on_background"
                android:title="@string/newest_first_label" />

            <item
                android:id="@+id/sort_old"
                android:icon="@drawable/ic_arrow_upward_black_24dp"
                app:iconTint="@color/color_on_background"
                android:title="@string/oldest_first_label" />

        </menu>

    </item>

</menu>