<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="none">
        <item
            android:id="@id/dashboard_page_fragment"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@id/launches_page_fragment"
            android:icon="@drawable/ic_rocket"
            android:title="@string/menu_launches" />
        <item
            android:id="@id/statistics_page_fragment"
            android:icon="@drawable/ic_data_usage_black_24dp"
            android:title="@string/menu_statistics"/>
    </group>

    <item android:title="@string/menu_about">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/menu_settings" />
            <item
                android:id="@id/about_page_fragment"
                android:icon="@drawable/ic_info_outline_black_24dp"
                android:title="@string/menu_about" />
        </menu>
    </item>

</menu>
