<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@id/launch_nav_graph"
        android:icon="@drawable/ic_event_black_24dp"
        android:title="@string/menu_launches" />
    <item
        android:id="@id/news_page_fragment"
        android:icon="@drawable/ic_newspaper"
        android:title="@string/menu_news" />
    <item
        android:id="@id/astronauts_nav_graph"
        android:icon="@drawable/ic_baseline_people_24"
        android:title="@string/menu_astronauts" />
    <item
        android:id="@id/vehicles_nav_graph"
        android:icon="@drawable/ic_rocket"
        android:title="@string/menu_vehicles" />
    <!--<item
        android:id="@id/statistics_page_fragment"
        android:icon="@drawable/ic_data_usage_black_24dp"
        android:title="@string/menu_statistics" />-->

</menu>