<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/toolbar_label_guideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <TextView
        android:id="@+id/date_range_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/date_range_label"
        android:textAppearance="?textAppearanceOverline"
        app:layout_constraintBottom_toBottomOf="@id/date_range_group"
        app:layout_constraintEnd_toStartOf="@id/toolbar_label_guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/date_range_group" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/date_range_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/toolbar_label_guideline"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/date_picker"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:text="@string/date_picker_button_label"
            tools:text="21/10/2030-01/12/2043" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/date_range_clear_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:visibility="gone"
            app:icon="@drawable/ic_baseline_close_24"
            tools:visibility="visible" />

    </com.google.android.material.button.MaterialButtonToggleGroup>

    <TextView
        android:id="@+id/order_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_margin"
        android:text="@string/order_label"
        android:textAppearance="?textAppearanceOverline"
        app:layout_constraintBottom_toBottomOf="@id/order_group"
        app:layout_constraintEnd_toStartOf="@id/toolbar_label_guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/order_group" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/order_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginEnd="@dimen/medium_margin"
        app:checkedButton="@id/ascending"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/toolbar_label_guideline"
        app:layout_constraintTop_toBottomOf="@id/date_range_group"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/ascending"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/ascending_button_label" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/descending"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/descending_button_label" />

    </com.google.android.material.button.MaterialButtonToggleGroup>

    <TextView
        android:id="@+id/rocket_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_margin"
        android:text="@string/rocket_type_label"
        android:textAppearance="?textAppearanceOverline"
        app:layout_constraintBottom_toBottomOf="@id/rocket_group_scrollview"
        app:layout_constraintEnd_toStartOf="@id/toolbar_label_guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/rocket_group_scrollview" />

    <HorizontalScrollView
        android:id="@+id/rocket_group_scrollview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/toolbar_label_guideline"
        app:layout_constraintTop_toBottomOf="@id/order_group">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/rocket_group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/small_margin"
            android:paddingEnd="@dimen/medium_margin"
            app:singleLine="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/falcon_nine_chip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/falcon_9" />

            <com.google.android.material.chip.Chip
                android:id="@+id/falcon_heavy_chip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/falcon_heavy" />

            <com.google.android.material.chip.Chip
                android:id="@+id/falcon_one_chip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/falcon_1" />

            <com.google.android.material.chip.Chip
                android:id="@+id/starship_chip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/starship" />

        </com.google.android.material.chip.ChipGroup>

    </HorizontalScrollView>

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginEnd="@dimen/medium_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rocket_group_scrollview">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/reset"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/clear_label" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/apply"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/apply_label" />

    </com.google.android.material.button.MaterialButtonToggleGroup>

</merge>