<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/scrim"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0"
        android:background="?attr/scrimBackground"
        android:visibility="gone" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_background"
        android:paddingBottom="56dp"
        app:behavior_halfExpandedRatio="0.5"
        app:behavior_hideable="true"
        app:behavior_skipCollapsed="true"
        app:layout_behavior="@string/bottom_sheet_behavior">

        <TextView
            android:id="@+id/launch_mass_filters_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium_margin"
            android:text="@string/filter"
            app:layout_constraintBottom_toBottomOf="@id/launch_mass_filters_scroll"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/launch_mass_filters_scroll" />

        <HorizontalScrollView
            android:id="@+id/launch_mass_filters_scroll"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:layout_marginEnd="@dimen/medium_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/launch_mass_filters_text"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/launch_mass_rocket_chip_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_margin"
                app:singleLine="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/launch_mass_falcon_one_toggle"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/falcon_1" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/launch_mass_falcon_nine_toggle"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/falcon_9" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/launch_mass_falcon_heavy_toggle"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/falcon_heavy" />

            </com.google.android.material.chip.ChipGroup>

        </HorizontalScrollView>

        <TextView
            android:id="@+id/launch_mass_type_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium_margin"
            android:text="@string/type_filter_label"
            app:layout_constraintBottom_toBottomOf="@id/launch_mass_type_scroll"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/launch_mass_type_scroll" />

        <HorizontalScrollView
            android:id="@+id/launch_mass_type_scroll"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:layout_marginEnd="@dimen/medium_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/launch_mass_type_text"
            app:layout_constraintTop_toBottomOf="@id/launch_mass_filters_scroll">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/launch_mass_type_chip_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_margin"
                app:selectionRequired="true"
                app:singleLine="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/launch_mass_rocket_toggle"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/rockets_label" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/launch_mass_orbit_toggle"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/orbits_label" />

            </com.google.android.material.chip.ChipGroup>

        </HorizontalScrollView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/reset"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium_margin"
            android:layout_marginTop="@dimen/small_margin"
            android:layout_marginEnd="@dimen/medium_margin"
            android:layout_marginBottom="@dimen/medium_margin"
            android:text="@string/clear_label"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/launch_mass_type_scroll" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>